--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pocket-projects</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <title>Pocket Projects</title>
+</head>
+
+<body class="bg-indigo-100">
+<!-- React mounts your entire app here -->
+<div id="root"></div>
+
+<!-- Vite automatically loads your main.tsx entry -->
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
